# smylee-dev-workflows

./: .flake8  .gitignore  README.md  diagram.graffle  pyproject.toml  requirements-dev.txt
dev/: README.md  requirements-dev.txt
functions/dispatcher/: pyproject.toml  requirements.txt
functions/dispatcher/dev_workflow/dispatcher/: dispatch_event.py  handler.py  payload.py  pr__open.py  verify_user.py
functions/dispatcher/dispatcher/: dispatch_event.py  handler.py
functions/pull_request__merged/: pyproject.toml  requirements.txt
functions/pull_request__merged/dev_workflow/pull_request__merged/: handler.py
functions/pull_request__open/: pyproject.toml  requirements.txt
functions/pull_request__open/dev_workflow/pull_request__open/: handler.py
infrastructure/: .gitignore  api_deployment.json  build  build.sh  deploy  deploy.sh  dispatcher_function.py  dispatcher_iam.py  function_dispatcher.py  function_pull_request_merged.py  function_pull_request_open.py  main.py  requirements.txt  user_access.txt
infrastructure/api_gateway/: apis.py
shared/utils/: pyproject.toml
shared/utils/dev_workflow/utils/: split_string.py
shared/utils/dev_workflow/utils/github/: payload_validator.py
smylee_dev_workflows/functions/dispatcher/: dispatch_event.py  handler.py  requirements.txt
smylee_dev_workflows/functions/pull-request-open/: handler.py
smylee_dev_workflows/shared/: setup.py
smylee_dev_workflows/shared/github/: payload_validator.py
tests/shared/utils/github/: payload_validator_test.py
